Pagina de gracias con botón de regresar a la tienda

--- a/gracias.html
+++ b/gracias.html
@@ -15,14 +15,17 @@
           class="logo"
         />
         <h1>¡GRACIAS POR TU COMPRA!</h1>
-        <p>Tu pedido esta siendo procesado</p>
+        <p>Tu pedido está siendo procesado</p>
         <p>Si tienes alguna duda sobre tu pedido, escríbenos.</p>
+
         <a
           href="https://wa.me/3045354056?text=Hola%2C%20tengo%20una%20pregunta."
           class="boton-whatsapp"
           target="_blank"
           >¡Escríbeme!</a
         >
+
+        <a href="index.html" class="boton-tienda">⬅ Volver a la tienda</a>
       </div>
     </section>
   </body>
