Ajustes adicionales agregados

--- a/index.html
+++ b/index.html
@@ -85,6 +85,28 @@
         </p>
       </div>
     </section>
+    <section class="productos2">
+      <div class="fila">
+        <div class="columna">
+          <img src="producto1.jpg" alt="Cuadros de amor" />
+        </div>
+        <div class="columna texto">
+          <i class="fas fa-heart icono"></i>
+          <h2>Cuadros de amor</h2>
+          <p>Diseñado con las fotos que más te gustan.</p>
+          <i class="fas fa-heart icono"></i>
+          <h2>Diseños únicos con caligrafía</h2>
+          <p>Adaptados al texto que decidas.</p>
+        </div>
+        <div class="columna">
+          <img src="producto2.jpg" alt="Producto 2" />
+        </div>
+      </div>
+      <div class="boton">
+        <a href="#checkout" class="btn"><span>LO QUIERO</span></a>
+      </div>
+    </section>
+    <!-- <section>Aqui es para agregar unas cuadro con 4 imágenes a la izquierda y a la derecha una descripción general... Debajo de la descripción un botón</section>  -->
     <section id="promocion">
       <h1>Promoción de regalos</h1>
       <div class="producto-contenedor">
@@ -228,6 +250,7 @@
                 data-name="Mugs"
                 data-price="19900"
               />
+              <!-- <img src="img/Mugs.png" alt="Mug" class="product-image" /> -->
               Mugs - $19.900
               <input type="number" class="quantity" value="0" min="0" />
             </label>
