--- a/gracias.html
+++ b/gracias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gracias por tu compra</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="img/Logo-removebg-preview.png" type="image/x-icon" />
   </head>
   <body>
     <section class="thankyoupage">
